--- a/tlou-infected-api/tlou-infected-api.csproj
+++ b/tlou-infected-api/tlou-infected-api.csproj
@@ -9,27 +9,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.13"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.13" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.8" />
+        <PackageReference Include="MongoDB.Driver" Version="3.4.2" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
 
     <ItemGroup>
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
-      <Content Remove="src\Domain\Enums\**" />
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Remove="src\Domain\Enums\**" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <EmbeddedResource Remove="src\Domain\Enums\**" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Remove="src\Domain\Enums\**" />
+      
     </ItemGroup>
 
 </Project>
