--- a/tlou-infected-api/appsettings.json
+++ b/tlou-infected-api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DbConnection": "mongodb+srv://gionacimento:<db_password>@cluster0.mx7nen3.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
