feat: Correct smartEnum serialization

--- a/tlou-infected-api/appsettings.json
+++ b/tlou-infected-api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DbConnection": "mongodb+srv://gionacimento:<db_password>@cluster0.mx7nen3.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0"
+    "DbConnection": "mongodb+srv://gionacimento:9XHxxiODuzduY3PE@cluster0.mx7nen3.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0"
   },
   "Logging": {
     "LogLevel": {
