--- a/tlou-infected-api/tlou-infected-api.csproj
+++ b/tlou-infected-api/tlou-infected-api.csproj
@@ -9,10 +9,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Ardalis.SmartEnum" Version="8.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.13" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.8" />
         <PackageReference Include="MongoDB.Driver" Version="3.4.2" />
+        <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
 
@@ -20,10 +22,6 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
-    </ItemGroup>
-
-    <ItemGroup>
-      
     </ItemGroup>
 
 </Project>
