feat: adding compose with mongodb

--- a/tlou-infected-api/appsettings.json
+++ b/tlou-infected-api/appsettings.json
@@ -1,6 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DbConnection": "MONGODB_URI"
+  "MongoDB": {
+    "ConnectionString": "mongodb://root:secret@localhost:27017/?authSource=admin",
+    "Database": "tlou-db"
   },
   "Logging": {
     "LogLevel": {
