--- a/tlou-infected-api/tlou-infected-api.csproj
+++ b/tlou-infected-api/tlou-infected-api.csproj
@@ -18,7 +18,12 @@
         <PackageReference Include="MongoDB.Driver" Version="3.4.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
-
+    
+    <PropertyGroup>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <NoWarn>$(NoWarn);1591</NoWarn>
+    </PropertyGroup>
+    
     <ItemGroup>
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
