feat: add Kafka configuration and implement consumer worker for message processing

--- a/tlou-infected-api/appsettings.json
+++ b/tlou-infected-api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Kafka" : {
+    "Host": "localhost:9092",
+    "Topic": "subscribe"
+  },
   "MongoDB": {
     "ConnectionString": "mongodb://root:secret@localhost:27017/?authSource=admin",
     "Database": "tlou-db"
