--- a/tlou-infected-api/tlou-infected-api.csproj
+++ b/tlou-infected-api/tlou-infected-api.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Confluent.Kafka" Version="2.13.0" />
         <PackageReference Include="DotNetEnv" Version="3.1.1" />
         <PackageReference Include="Ardalis.SmartEnum" Version="8.2.0" />
         <PackageReference Include="FluentValidation" Version="12.1.0" />
