--- a/compose.yaml
+++ b/compose.yaml
@@ -2,28 +2,30 @@
 
 services:
   mongo:
-    image: mongo:latest
-    restart: always
+    image: mongo:7.0
+    container_name: mongo
+    restart: unless-stopped
+    ports:
+      - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-    networks:
-      - net
-
+      MONGO_INITDB_ROOT_PASSWORD: secret
+    volumes:
+      - mongo_data:/data/db
+  
   mongo-express:
-    image: mongo-express:latest
-    restart: always
+    image: mongo-express:1.0.2
     depends_on:
       - mongo
+    restart: unless-stopped
     ports:
       - "8081:8081"
     environment:
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
-      ME_CONFIG_BASICAUTH_ENABLED: "true"
-      ME_CONFIG_BASICAUTH_USERNAME: mongoexpressuser
-      ME_CONFIG_BASICAUTH_PASSWORD: mongoexpresspass
-    networks:
-      - net
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: secret
+      ME_CONFIG_BASICAUTH_USERNAME: admin
+      ME_CONFIG_BASICAUTH_PASSWORD: admin123
+      ME_CONFIG_MONGODB_URL: mongodb://root:secret@mongo:27017/?authSource=admin
 
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
@@ -40,29 +42,21 @@ services:
     depends_on:
       - zookeeper
     ports:
-      - "9092:9092"   # acesso pelo host
+      - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-
-      # O broker escuta em duas portas
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:29092,PLAINTEXT_HOST://0.0.0.0:9092
-
-      # O broker ANUNCIA endereços diferentes para clientes internos vs externos
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
-
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      
     networks:
       - net
   
   kafka-ui:
     image: provectuslabs/kafka-ui
     container_name: kafka-ui
-    networks:
-      - net
     depends_on:
       - kafka
     ports:
@@ -72,6 +66,11 @@ services:
       - KAFKA_CLUSTERS_0_NAME=kafka
       - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:29092
       - KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper:2181
+    networks:
+      - net
+
+volumes:
+  mongo_data:
 
 networks:
   net:
