feat: enhance Kafka integration by adding Survivor topic and updating consumer logic

--- a/tlou-infected-api/appsettings.json
+++ b/tlou-infected-api/appsettings.json
@@ -1,7 +1,8 @@
 {
   "Kafka" : {
     "Host": "localhost:9092",
-    "Topic": "subscribe"
+    "Topic": "subscribe",
+    "TopicSurvivor" : "create-survivor"
   },
   "MongoDB": {
     "ConnectionString": "mongodb://root:secret@localhost:27017/?authSource=admin",
